resolved issues with image for about but issue with text overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.aboutImg {
+  float:left; width:300px; height:300px;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.headshotImg {
+  border-radius: 50%;
+  
+}
+
+.aboutTxt {
+  margin-left: auto;
+  margin-right: auto;
 }
